# NetSim

./: .gitignore  CMakeLists.txt  README.md  diagram.md  main.cpp  main_test.cpp  nodes.hxx(concept)
docs/: diagram.md
include/: factory.hxx  helpers.hxx  nodes.hxx  package.hxx  storage_types.hxx  types.hxx
src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  storage_types.cpp
test/: tests.cpp
